<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="3"
    android:columnCount="4"
    android:background="@color/mid_pannel"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="5dp"
        android:gravity="center_horizontal|center_vertical">
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_mid_01"
            android:background="@color/transparency"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_mid_01" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="5dp"
        android:gravity="center_horizontal|center_vertical">
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_mid_02"
            android:background="@color/transparency"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_mid_02" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_row="0"
        android:layout_column="2"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="5dp"
        android:gravity="center_horizontal|center_vertical">
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_mid_03"
            android:background="@color/transparency"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_mid_03" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_row="0"
        android:layout_column="3"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="5dp"
        android:gravity="center_horizontal|center_vertical">
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_mid_04"
            android:background="@color/transparency"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_mid_04" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="5dp"
        android:gravity="center_horizontal|center_vertical">
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_mid_05"
            android:background="@color/transparency"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_mid_05" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="5dp"
        android:gravity="center_horizontal|center_vertical">
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_mid_06"
            android:background="@color/transparency"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_mid_06" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="5dp"
        android:gravity="center_horizontal|center_vertical">
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_mid_07"
            android:background="@color/transparency"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_mid_07" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_row="1"
        android:layout_column="3"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="5dp"
        android:gravity="center_horizontal|center_vertical">
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_mid_08"
            android:background="@color/transparency"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_mid_08" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="5dp"
        android:gravity="center_horizontal|center_vertical">
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_mid_09"
            android:background="@color/transparency"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_mid_09" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="5dp"
        android:gravity="center_horizontal|center_vertical">
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_mid_10"
            android:background="@color/transparency"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_mid_10" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="5dp"
        android:gravity="center_horizontal|center_vertical">
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_mid_11"
            android:background="@color/transparency"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_mid_11" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_row="2"
        android:layout_column="3"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="5dp"
        android:gravity="center_horizontal|center_vertical">
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_mid_12"
            android:background="@color/transparency"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_mid_12"/>
    </LinearLayout>
</GridLayout>